Finish Homepage and fix minor layout bug

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,4 +3,5 @@
 
 html, body {
     font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    scroll-behavior: smooth;
 }
